[package]
name = "hping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["blocking"] }
#reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
#reqwest = "0.11.4"
tokio = { version = "1", features = ["full"] }
